--- a/examples/index.html
+++ b/examples/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Vivet</title>
+    <title>Example 1</title>
     <meta charset="UTF-8">
     <link href="style/style.css" rel="stylesheet" type="text/css">
     <script deffer>
