--- a/examples/index.html
+++ b/examples/index.html
@@ -31,7 +31,7 @@
     </script>
 </head>
 <body>
-  <script type="module" src="main.js"></script>
+  <script type="module" src="./main.js"></script>
   <canvas id="canvas"></canvas>
 </body>
 
